re PR c++/43327 (ICE in unifiy.c)

Fix for PR c++/43327

gcc/cp/ChangeLog:
	PR c++/43327
	* pt.c (add_to_template_args): Support NULL ARGS;
	(most_specialized_class): call coerce_template_parms on
	template arguments passed to get_class_bindings. Use
	add_to_template_args.
	(unify): Handle VAR_DECLs.

gcc/testsuite/ChangeLog:
	PR c++/43327
	* g++.dg/other/crash-10.C: New test.
	* g++.dg/other/crash-11.C: New test.

From-SVN: r157745